--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,7 @@
   },
   "autoload": {
     "classmap": [
-      "DesignPattern"
-    ],
-    "psr-4": {
-      "DesignPatterns\\": ""
-    }
+      "app"
+    ]
   }
 }
